// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should load swc-confidential wasm plugin correctly > Should transform .expressions correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
const darken = (c)=>c;
const color = "red";
const otherColor = "green";
const mediumScreen = "680px";
const animationDuration = "200ms";
const animationName = "my-cool-animation";
const obj = {
    display: "block"
};
export default (({ display })=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-7d790162c8ab53bf " + _JSXStyle.dynamic([
            [
                "f374bce66bf8bc53",
                [
                    display ? "block" : "none"
                ]
            ],
            [
                "9ff947367eb295a9",
                [
                    darken(color) + 2
                ]
            ],
            [
                "97031d45e1e1883c",
                [
                    darken(color)
                ]
            ]
        ])
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-7d790162c8ab53bf " + _JSXStyle.dynamic([
            [
                "f374bce66bf8bc53",
                [
                    display ? "block" : "none"
                ]
            ],
            [
                "9ff947367eb295a9",
                [
                    darken(color) + 2
                ]
            ],
            [
                "97031d45e1e1883c",
                [
                    darken(color)
                ]
            ]
        ])
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "b858211f1ae5f9a7"
    }, \`p.\${color}.jsx-7d790162c8ab53bf{color:\${otherColor};display:\${obj.display}}\`), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "94239b6d6b42c9b5"
    }, "p.jsx-7d790162c8ab53bf{color:red}"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "bfe06f4e2e097633"
    }, \`body{background:\${color}}\`), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "bfe06f4e2e097633"
    }, \`body{background:\${color}}\`), "// TODO: the next two should have the same hash", /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "73815d631c0fd05a"
    }, \`p.jsx-7d790162c8ab53bf{color:\${color}}\`), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "73815d631c0fd05a"
    }, \`p.jsx-7d790162c8ab53bf{color:\${color}}\`), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "97031d45e1e1883c",
        dynamic: [
            darken(color)
        ]
    }, \`p.__jsx-style-dynamic-selector{color:\${darken(color)}}\`), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "9ff947367eb295a9",
        dynamic: [
            darken(color) + 2
        ]
    }, \`p.__jsx-style-dynamic-selector{color:\${darken(color) + 2}}\`), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "df2e7ce1df099141"
    }, \`@media(min-width:\${mediumScreen}){p.jsx-7d790162c8ab53bf{color:green}p.jsx-7d790162c8ab53bf{color:\${\`red\`}}}p.jsx-7d790162c8ab53bf{color:red}\`), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "a7e92eb9fe137ba9"
    }, \`p.jsx-7d790162c8ab53bf{-webkit-animation-duration:\${animationDuration};-moz-animation-duration:\${animationDuration};-o-animation-duration:\${animationDuration};animation-duration:\${animationDuration}}\`), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "33b91b924c07e1e8"
    }, \`p.jsx-7d790162c8ab53bf{-webkit-animation:\${animationDuration} forwards \${animationName};-moz-animation:\${animationDuration} forwards \${animationName};-o-animation:\${animationDuration} forwards \${animationName};animation:\${animationDuration} forwards \${animationName}}div.jsx-7d790162c8ab53bf{background:\${color}}\`), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "f374bce66bf8bc53",
        dynamic: [
            display ? "block" : "none"
        ]
    }, \`span.__jsx-style-dynamic-selector{display:\${display ? "block" : "none"}}\`), "// TODO: causes bad syntax"));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform absent correctly 1`] = `
"const a = ()=>/*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement("p", null, "hi"), /*#__PURE__*/ React.createElement("style", null, "woot"));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform attribute-generation-classname-rewriting correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default (()=>{
    const Element = "div";
    return /*#__PURE__*/ React.createElement("div", {
        className: "jsx-abb4c2202db1a207"
    }, /*#__PURE__*/ React.createElement("div", {
        ...test.test,
        className: "jsx-abb4c2202db1a207" + " " + (test.test && test.test.className != null && test.test.className || "test")
    }), /*#__PURE__*/ React.createElement("div", {
        ...test.test.test,
        className: "jsx-abb4c2202db1a207" + " " + (test.test.test && test.test.test.className != null && test.test.test.className || "test")
    }), /*#__PURE__*/ React.createElement("div", {
        ...this.test.test,
        className: "jsx-abb4c2202db1a207" + " " + (this.test.test && this.test.test.className != null && this.test.test.className || "test")
    }), /*#__PURE__*/ React.createElement("div", {
        "data-test": "test",
        className: "jsx-abb4c2202db1a207"
    }), /*#__PURE__*/ React.createElement("div", {
        className: "jsx-abb4c2202db1a207" + " " + "test"
    }), /*#__PURE__*/ React.createElement("div", {
        className: "jsx-abb4c2202db1a207" + " " + \`test\`
    }), /*#__PURE__*/ React.createElement("div", {
        className: "jsx-abb4c2202db1a207" + " " + \`test\${true ? " test2" : ""}\`
    }), /*#__PURE__*/ React.createElement("div", {
        className: "jsx-abb4c2202db1a207" + " " + ("test " + test || "")
    }), /*#__PURE__*/ React.createElement("div", {
        className: "jsx-abb4c2202db1a207" + " " + ([
            "test",
            "test2"
        ].join(" ") || "")
    }), /*#__PURE__*/ React.createElement("div", {
        className: "jsx-abb4c2202db1a207" + " " + (true && "test" || "")
    }), /*#__PURE__*/ React.createElement("div", {
        className: "jsx-abb4c2202db1a207" + " " + ((test ? "test" : null) || "")
    }), /*#__PURE__*/ React.createElement("div", {
        className: "jsx-abb4c2202db1a207" + " " + (test || "")
    }), /*#__PURE__*/ React.createElement("div", {
        className: "jsx-abb4c2202db1a207" + " " + (test && "test" || "")
    }), /*#__PURE__*/ React.createElement("div", {
        className: "jsx-abb4c2202db1a207" + " " + (test && test("test") || "")
    }), /*#__PURE__*/ React.createElement("div", {
        className: "jsx-abb4c2202db1a207" + " " + (undefined || "")
    }), /*#__PURE__*/ React.createElement("div", {
        className: "jsx-abb4c2202db1a207" + " " + (null || "")
    }), /*#__PURE__*/ React.createElement("div", {
        className: "jsx-abb4c2202db1a207" + " " + (false || "")
    }), /*#__PURE__*/ React.createElement("div", {
        "data-test": true,
        className: "jsx-abb4c2202db1a207" + " " + "test"
    }), /*#__PURE__*/ React.createElement("div", {
        "data-test": true,
        className: "jsx-abb4c2202db1a207" + " " + "test"
    }), /*#__PURE__*/ React.createElement("div", {
        "data-test": "test",
        className: "jsx-abb4c2202db1a207" + " " + "test"
    }), /*#__PURE__*/ React.createElement("div", {
        ...props,
        className: "jsx-abb4c2202db1a207" + " " + (props && props.className != null && props.className || "test")
    }), /*#__PURE__*/ React.createElement("div", {
        ...props,
        ...rest,
        className: "jsx-abb4c2202db1a207" + " " + (rest && rest.className != null && rest.className || props && props.className != null && props.className || "test")
    }), /*#__PURE__*/ React.createElement("div", {
        ...props,
        className: "jsx-abb4c2202db1a207" + " " + (props && props.className != null && props.className || \`test \${test ? "test" : ""}\`)
    }), /*#__PURE__*/ React.createElement("div", {
        ...props,
        className: "jsx-abb4c2202db1a207" + " " + (props && props.className != null && props.className || test && test("test") || "")
    }), /*#__PURE__*/ React.createElement("div", {
        ...props,
        className: "jsx-abb4c2202db1a207" + " " + (props && props.className != null && props.className || test && test("test") && "test" || "")
    }), /*#__PURE__*/ React.createElement("div", {
        ...props,
        className: "jsx-abb4c2202db1a207" + " " + (props && props.className != null && props.className || test && test("test") && test2("test") || "")
    }), /*#__PURE__*/ React.createElement("div", {
        ...props,
        className: "jsx-abb4c2202db1a207" + " " + "test"
    }), /*#__PURE__*/ React.createElement("div", {
        ...props,
        ...rest,
        className: "jsx-abb4c2202db1a207" + " " + "test"
    }), /*#__PURE__*/ React.createElement("div", {
        ...props,
        ...rest,
        className: "jsx-abb4c2202db1a207" + " " + (rest && rest.className != null && rest.className || "test")
    }), /*#__PURE__*/ React.createElement("div", {
        ...props,
        className: "jsx-abb4c2202db1a207" + " " + (props && props.className != null && props.className || "")
    }), /*#__PURE__*/ React.createElement("div", {
        ...props,
        ...rest,
        className: "jsx-abb4c2202db1a207" + " " + (rest && rest.className != null && rest.className || props && props.className != null && props.className || "")
    }), /*#__PURE__*/ React.createElement("div", {
        ...props,
        "data-foo": true,
        ...rest,
        className: "jsx-abb4c2202db1a207" + " " + (rest && rest.className != null && rest.className || props && props.className != null && props.className || "")
    }), /*#__PURE__*/ React.createElement("div", {
        ...props,
        "data-foo": true,
        ...rest,
        className: "jsx-abb4c2202db1a207" + " " + (rest && rest.className != null && rest.className || "test")
    }), /*#__PURE__*/ React.createElement("div", {
        id: "foo",
        className: "jsx-abb4c2202db1a207"
    }), /*#__PURE__*/ React.createElement("div", {
        className: "jsx-abb4c2202db1a207" + " " + "foo"
    }), /*#__PURE__*/ React.createElement("div", {
        className: "foo",
        className: "jsx-abb4c2202db1a207" + " " + "test"
    }), /*#__PURE__*/ React.createElement("div", {
        className: "test",
        className: "jsx-abb4c2202db1a207" + " " + "foo"
    }), /*#__PURE__*/ React.createElement("div", {
        ...bar,
        className: "jsx-abb4c2202db1a207" + " " + (bar && bar.className != null && bar.className || "foo")
    }), /*#__PURE__*/ React.createElement("div", {
        className: "foo",
        ...bar,
        className: "jsx-abb4c2202db1a207" + " " + "test"
    }), /*#__PURE__*/ React.createElement("div", {
        className: "test",
        ...bar,
        className: "jsx-abb4c2202db1a207" + " " + (bar && bar.className != null && bar.className || "foo")
    }), /*#__PURE__*/ React.createElement("div", {
        className: "test",
        className: "jsx-abb4c2202db1a207" + " " + (props.className || "")
    }), /*#__PURE__*/ React.createElement("div", {
        className: "test",
        ...bar,
        className: "jsx-abb4c2202db1a207" + " " + (bar && bar.className != null && bar.className || props.className || "")
    }), /*#__PURE__*/ React.createElement("div", {
        className: "test",
        ...bar,
        className: "jsx-abb4c2202db1a207" + " " + (props.className || "")
    }), /*#__PURE__*/ React.createElement("div", {
        ...bar(),
        className: "jsx-abb4c2202db1a207" + " " + "test"
    }), /*#__PURE__*/ React.createElement(Element, {
        className: "jsx-abb4c2202db1a207"
    }), /*#__PURE__*/ React.createElement(Element, {
        className: "jsx-abb4c2202db1a207" + " " + "test"
    }), /*#__PURE__*/ React.createElement(Element, {
        ...props,
        className: "jsx-abb4c2202db1a207" + " " + (props && props.className != null && props.className || "")
    }), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "abb4c2202db1a207"
    }, "div.jsx-abb4c2202db1a207{color:red}"));
});
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform attribute-generation-modes correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
import styles from "./styles";
const styles2 = require("./styles2");
// external only
export const Test1 = ()=>/*#__PURE__*/ React.createElement("div", {
        className: \`jsx-\${styles2.__hash} jsx-\${styles.__hash}\`
    }, /*#__PURE__*/ React.createElement("p", {
        className: \`jsx-\${styles2.__hash} jsx-\${styles.__hash}\`
    }, "external only"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: styles.__hash
    }, styles), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: styles2.__hash
    }, styles2));
// external and static
export const Test2 = ()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-81a68341e430a972 " + \`jsx-\${styles.__hash}\`
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-81a68341e430a972 " + \`jsx-\${styles.__hash}\`
    }, "external and static"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "81a68341e430a972"
    }, "p.jsx-81a68341e430a972{color:red}"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: styles.__hash
    }, styles));
// external and dynamic
export const Test3 = ({ color })=>/*#__PURE__*/ React.createElement("div", {
        className: \`jsx-\${styles.__hash}\` + " " + _JSXStyle.dynamic([
            [
                "ef5a1b863e7906fd",
                [
                    color
                ]
            ]
        ])
    }, /*#__PURE__*/ React.createElement("p", {
        className: \`jsx-\${styles.__hash}\` + " " + _JSXStyle.dynamic([
            [
                "ef5a1b863e7906fd",
                [
                    color
                ]
            ]
        ])
    }, "external and dynamic"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "ef5a1b863e7906fd",
        dynamic: [
            color
        ]
    }, \`p.__jsx-style-dynamic-selector{color:\${color}}\`), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: styles.__hash
    }, styles));
// external, static and dynamic
export const Test4 = ({ color })=>/*#__PURE__*/ React.createElement("div", {
        className: \`jsx-\${styles.__hash}\` + " jsx-ceba8c9ce34e3d0c " + _JSXStyle.dynamic([
            [
                "76298716cb999a3b",
                [
                    color
                ]
            ]
        ])
    }, /*#__PURE__*/ React.createElement("p", {
        className: \`jsx-\${styles.__hash}\` + " jsx-ceba8c9ce34e3d0c " + _JSXStyle.dynamic([
            [
                "76298716cb999a3b",
                [
                    color
                ]
            ]
        ])
    }, "external, static and dynamic"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "ceba8c9ce34e3d0c"
    }, "p.jsx-ceba8c9ce34e3d0c{display:inline-block}"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "76298716cb999a3b",
        dynamic: [
            color
        ]
    }, \`p.__jsx-style-dynamic-selector{color:\${color}}\`), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: styles.__hash
    }, styles));
// static only
export const Test5 = ()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-df0159ebd3f9fb6f"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-df0159ebd3f9fb6f"
    }, "static only"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "ceba8c9ce34e3d0c"
    }, "p.jsx-df0159ebd3f9fb6f{display:inline-block}"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "81a68341e430a972"
    }, "p.jsx-df0159ebd3f9fb6f{color:red}"));
// static and dynamic
export const Test6 = ({ color })=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-ceba8c9ce34e3d0c " + _JSXStyle.dynamic([
            [
                "3895e17ce77b69d1",
                [
                    color
                ]
            ]
        ])
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-ceba8c9ce34e3d0c " + _JSXStyle.dynamic([
            [
                "3895e17ce77b69d1",
                [
                    color
                ]
            ]
        ])
    }, "static and dynamic"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "ceba8c9ce34e3d0c"
    }, "p.jsx-ceba8c9ce34e3d0c{display:inline-block}"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "3895e17ce77b69d1",
        dynamic: [
            color
        ]
    }, \`p.__jsx-style-dynamic-selector{color:\${color}}\`));
// dynamic only
export const Test7 = ({ color })=>/*#__PURE__*/ React.createElement("div", {
        className: _JSXStyle.dynamic([
            [
                "bd26d92615520db6",
                [
                    color
                ]
            ]
        ])
    }, /*#__PURE__*/ React.createElement("p", {
        className: _JSXStyle.dynamic([
            [
                "bd26d92615520db6",
                [
                    color
                ]
            ]
        ])
    }, "dynamic only"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "bd26d92615520db6",
        dynamic: [
            color
        ]
    }, \`p.__jsx-style-dynamic-selector{color:\${color}}\`));
// dynamic with scoped compound variable
export const Test8 = ({ color })=>{
    if (color) {
        const innerProps = {
            color
        };
        return /*#__PURE__*/ React.createElement("div", {
            className: _JSXStyle.dynamic([
                [
                    "f0cf5707c4f40fc2",
                    [
                        innerProps.color
                    ]
                ]
            ])
        }, /*#__PURE__*/ React.createElement("p", {
            className: _JSXStyle.dynamic([
                [
                    "f0cf5707c4f40fc2",
                    [
                        innerProps.color
                    ]
                ]
            ])
        }, "dynamic with scoped compound variable"), /*#__PURE__*/ React.createElement(_JSXStyle, {
            id: "f0cf5707c4f40fc2",
            dynamic: [
                innerProps.color
            ]
        }, \`p.__jsx-style-dynamic-selector{color:\${innerProps.color}}\`));
    }
};
// dynamic with compound variable
export const Test9 = ({ color })=>{
    const innerProps = {
        color
    };
    return /*#__PURE__*/ React.createElement("div", {
        className: _JSXStyle.dynamic([
            [
                "58ca1b812573d314",
                [
                    innerProps.color
                ]
            ]
        ])
    }, /*#__PURE__*/ React.createElement("p", {
        className: _JSXStyle.dynamic([
            [
                "58ca1b812573d314",
                [
                    innerProps.color
                ]
            ]
        ])
    }, "dynamic with compound variable"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "58ca1b812573d314",
        dynamic: [
            innerProps.color
        ]
    }, \`p.__jsx-style-dynamic-selector{color:\${innerProps.color}}\`));
};
const foo = "red";
// dynamic with constant variable
export const Test10 = ()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-563898a29d0c8d10"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-563898a29d0c8d10"
    }, "dynamic with constant variable"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "563898a29d0c8d10"
    }, \`p.jsx-563898a29d0c8d10{color:\${foo}}\`));
// dynamic with complex scope
export const Test11 = ({ color })=>{
    const items = Array.from({
        length: 5
    }).map((item, i)=>/*#__PURE__*/ React.createElement("li", {
            key: i,
            className: _JSXStyle.dynamic([
                [
                    "118434e743df3274",
                    [
                        color
                    ]
                ]
            ]) + " " + "item"
        }, /*#__PURE__*/ React.createElement(_JSXStyle, {
            id: "118434e743df3274",
            dynamic: [
                color
            ]
        }, \`.item.__jsx-style-dynamic-selector{color:\${color}}\`), "Item #", i + 1));
    return /*#__PURE__*/ React.createElement("ul", {
        className: "items"
    }, items);
};
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform basic-variables-in-css correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default function Component() {
    const width = 100;
    const height = 200;
    const color = '#FF0000';
    return /*#__PURE__*/ React.createElement("div", {
        className: _JSXStyle.dynamic([
            [
                "dc595e2db5d50f19",
                [
                    width,
                    height,
                    color
                ]
            ]
        ])
    }, /*#__PURE__*/ React.createElement("h1", {
        className: _JSXStyle.dynamic([
            [
                "dc595e2db5d50f19",
                [
                    width,
                    height,
                    color
                ]
            ]
        ])
    }, "Basic Variables Test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "dc595e2db5d50f19",
        dynamic: [
            width,
            height,
            color
        ]
    }, \`.component.__jsx-style-dynamic-selector{width:\${width}px;height:\${height}px;color:\${color}}\`));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform class correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
class _class {
    render() {
        return /*#__PURE__*/ React.createElement("div", {
            className: "jsx-b2b86d63f35d25ee"
        }, /*#__PURE__*/ React.createElement("p", {
            className: "jsx-b2b86d63f35d25ee"
        }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
            id: "b2b86d63f35d25ee"
        }, "p.jsx-b2b86d63f35d25ee{color:red}"));
    }
}
export { _class as default };
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform complex-animation-keyframes correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default function Component() {
    const middleOpacity = 0.5;
    const rotation = 180;
    const duration = 1000;
    const easing = 'ease-in-out';
    const delay = 200;
    return /*#__PURE__*/ React.createElement("div", {
        className: _JSXStyle.dynamic([
            [
                "9a951a50ad92485b",
                [
                    middleOpacity,
                    rotation,
                    duration,
                    easing,
                    delay
                ]
            ]
        ]) + " " + "wrapper"
    }, /*#__PURE__*/ React.createElement("div", {
        className: _JSXStyle.dynamic([
            [
                "9a951a50ad92485b",
                [
                    middleOpacity,
                    rotation,
                    duration,
                    easing,
                    delay
                ]
            ]
        ]) + " " + "animated"
    }, "Animated Element"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "9a951a50ad92485b",
        dynamic: [
            middleOpacity,
            rotation,
            duration,
            easing,
            delay
        ]
    }, \`@-webkit-keyframes customAnimation{0%{opacity:0;-webkit-transform:scale(0);transform:scale(0)}50%{opacity:\${middleOpacity};-webkit-transform:rotate(\${rotation}deg);transform:rotate(\${rotation}deg)}100%{opacity:1;-webkit-transform:scale(1);transform:scale(1)}}@-moz-keyframes customAnimation{0%{opacity:0;-moz-transform:scale(0);transform:scale(0)}50%{opacity:\${middleOpacity};-moz-transform:rotate(\${rotation}deg);transform:rotate(\${rotation}deg)}100%{opacity:1;-moz-transform:scale(1);transform:scale(1)}}@-o-keyframes customAnimation{0%{opacity:0;-o-transform:scale(0);transform:scale(0)}50%{opacity:\${middleOpacity};-o-transform:rotate(\${rotation}deg);transform:rotate(\${rotation}deg)}100%{opacity:1;-o-transform:scale(1);transform:scale(1)}}@keyframes customAnimation{0%{opacity:0;-webkit-transform:scale(0);-moz-transform:scale(0);-o-transform:scale(0);transform:scale(0)}50%{opacity:\${middleOpacity};-webkit-transform:rotate(\${rotation}deg);-moz-transform:rotate(\${rotation}deg);-o-transform:rotate(\${rotation}deg);transform:rotate(\${rotation}deg)}100%{opacity:1;-webkit-transform:scale(1);-moz-transform:scale(1);-o-transform:scale(1);transform:scale(1)}}.wrapper.__jsx-style-dynamic-selector{}.wrapper.__jsx-style-dynamic-selector .animated.__jsx-style-dynamic-selector{-webkit-animation:customAnimation \${duration}ms \${easing} forwards;-moz-animation:customAnimation \${duration}ms \${easing} forwards;-o-animation:customAnimation \${duration}ms \${easing} forwards;animation:customAnimation \${duration}ms \${easing} forwards;-webkit-animation-delay:\${delay}ms;-moz-animation-delay:\${delay}ms;-o-animation-delay:\${delay}ms;animation-delay:\${delay}ms}\`));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform component-attribute correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
const Test = ()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-a9535d7d5f32c3c4"
    }, /*#__PURE__*/ React.createElement("span", {
        className: "jsx-a9535d7d5f32c3c4"
    }, "test"), /*#__PURE__*/ React.createElement(Component, null), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "a9535d7d5f32c3c4"
    }, "span.jsx-a9535d7d5f32c3c4{color:red}"));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform conflicts correctly 1`] = `
"// TODO
// export const _JSXStyle = '_JSXStyle-literal'
// export default function() {
//   return (
//     <div>
//       <p>test</p>
//       <style jsx>{\`
//         p {
//           color: red;
//         }
//       \`}</style>
//     </div>
//   )
// }
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform css-selector-after-pseudo correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
function NavigationItem({ active, className }) {
    return /*#__PURE__*/ React.createElement("span", {
        className: "jsx-e73bf96b356a8634" + " " + (cn({
            active
        }, className, "navigation-item") || "")
    }, /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "e73bf96b356a8634"
    }, '.navigation-item.jsx-e73bf96b356a8634 a::after{content:attr(data-text);content:attr(data-text)/""}'));
}
export default NavigationItem;
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform css-tag-same-file correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default (({ children })=>/*#__PURE__*/ React.createElement("div", {
        className: \`jsx-\${styles.__hash}\`
    }, /*#__PURE__*/ React.createElement("p", {
        className: \`jsx-\${styles.__hash}\`
    }, children), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: styles.__hash
    }, styles)));
const styles = new String("p.jsx-556239d258b6d66a{color:red}");
styles.__hash = "556239d258b6d66a";
class Test extends React.Component {
    render() {
        return /*#__PURE__*/ React.createElement("div", {
            className: \`jsx-\${styles.__hash}\`
        }, /*#__PURE__*/ React.createElement("p", {
            className: \`jsx-\${styles.__hash}\`
        }, this.props.children), /*#__PURE__*/ React.createElement(_JSXStyle, {
            id: styles.__hash
        }, styles));
    }
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform css-variables-and-functions correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default function Component() {
    const dynamicValue = '"dynamic content"';
    const color1 = '#FF0000';
    const color2 = '#0000FF';
    const offset = 5;
    const spacing = 10;
    return /*#__PURE__*/ React.createElement("div", {
        className: _JSXStyle.dynamic([
            [
                "22c978f6faeec16f",
                [
                    dynamicValue,
                    color1,
                    color2,
                    offset,
                    offset,
                    spacing
                ]
            ]
        ]) + " " + "container"
    }, /*#__PURE__*/ React.createElement("div", {
        className: _JSXStyle.dynamic([
            [
                "22c978f6faeec16f",
                [
                    dynamicValue,
                    color1,
                    color2,
                    offset,
                    offset,
                    spacing
                ]
            ]
        ]) + " " + "item"
    }, "CSS Variables and Functions"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "22c978f6faeec16f",
        dynamic: [
            dynamicValue,
            color1,
            color2,
            offset,
            offset,
            spacing
        ]
    }, \`.container.__jsx-style-dynamic-selector{--local-var:\${dynamicValue};color:var(--text-color);background:-webkit-linear-gradient(left,\${color1},\${color2});background:-moz-linear-gradient(left,\${color1},\${color2});background:-o-linear-gradient(left,\${color1},\${color2});background:linear-gradient(to right,\${color1},\${color2})}.container.__jsx-style-dynamic-selector .item.__jsx-style-dynamic-selector{-webkit-transform:translate(-webkit-calc(var(--x) + \${offset}px),-webkit-calc(var(--y) + \${offset}px));-moz-transform:translate(-moz-calc(var(--x) + \${offset}px),-moz-calc(var(--y) + \${offset}px));-ms-transform:translate(calc(var(--x) + \${offset}px),calc(var(--y) + \${offset}px));-o-transform:translate(calc(var(--x) + \${offset}px),calc(var(--y) + \${offset}px));transform:translate(-webkit-calc(var(--x) + \${offset}px),-webkit-calc(var(--y) + \${offset}px));transform:translate(-moz-calc(var(--x) + \${offset}px),-moz-calc(var(--y) + \${offset}px));transform:translate(calc(var(--x) + \${offset}px),calc(var(--y) + \${offset}px))}.container.__jsx-style-dynamic-selector div.__jsx-style-dynamic-selector{margin:-webkit-calc(10px + \${spacing}px);margin:-moz-calc(10px + \${spacing}px);margin:calc(10px + \${spacing}px)}\`));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform different-jsx-ids correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
const color = "red";
const otherColor = "green";
const A = ()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-73815d631c0fd05a"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-73815d631c0fd05a"
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "73815d631c0fd05a"
    }, \`p.jsx-73815d631c0fd05a{color:\${color}}\`));
const B = ()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-dd59f687949dba4a"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-dd59f687949dba4a"
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "dd59f687949dba4a"
    }, \`p.jsx-dd59f687949dba4a{color:\${otherColor}}\`));
export default (()=>/*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement(A, null), /*#__PURE__*/ React.createElement(B, null)));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform dynamic-element correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default (({ level = 1 })=>{
    const Element = \`h\${level}\`;
    return /*#__PURE__*/ React.createElement(Element, {
        className: "jsx-fca64cc3f069b519" + " " + "root"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-fca64cc3f069b519"
    }, "dynamic element"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "fca64cc3f069b519"
    }, ".root.jsx-fca64cc3f069b519{background:red}"));
});
export const TestLowerCase = ({ level = 1 })=>{
    const element = \`h\${level}\`;
    return /*#__PURE__*/ React.createElement("element", {
        className: "jsx-fca64cc3f069b519" + " " + "root"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-fca64cc3f069b519"
    }, "dynamic element"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "fca64cc3f069b519"
    }, ".root.jsx-fca64cc3f069b519{background:red}"));
};
const Element2 = "div";
export const Test2 = ()=>{
    return /*#__PURE__*/ React.createElement(Element2, {
        className: "root"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-fca64cc3f069b519"
    }, "dynamic element"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "fca64cc3f069b519"
    }, ".root.jsx-fca64cc3f069b519{background:red}"));
};
export const Test3 = ({ Component = "div" })=>{
    return /*#__PURE__*/ React.createElement(Component, {
        className: "jsx-fca64cc3f069b519"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-fca64cc3f069b519"
    }, "dynamic element"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "fca64cc3f069b519"
    }, ".root.jsx-fca64cc3f069b519{background:red}"));
};
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform dynamic-element-class correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
class _class {
    render() {
        const Element = "div";
        return /*#__PURE__*/ React.createElement(Element, {
            className: "jsx-f825b24bbab5b83b" + " " + "root"
        }, /*#__PURE__*/ React.createElement("p", {
            className: "jsx-f825b24bbab5b83b"
        }, "dynamic element"), /*#__PURE__*/ React.createElement(_JSXStyle, {
            id: "f825b24bbab5b83b"
        }, ".root.jsx-f825b24bbab5b83b{background:red}"));
    }
}
export { _class as default };
const Element2 = "div";
export const Test2 = class {
    render() {
        return /*#__PURE__*/ React.createElement(Element2, {
            className: "root"
        }, /*#__PURE__*/ React.createElement("p", {
            className: "jsx-f825b24bbab5b83b"
        }, "dynamic element"), /*#__PURE__*/ React.createElement(_JSXStyle, {
            id: "f825b24bbab5b83b"
        }, ".root.jsx-f825b24bbab5b83b{background:red}"));
    }
};
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform dynamic-element-external correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
import styles from "./styles2";
export default (({ level = 1 })=>{
    const Element = \`h\${level}\`;
    return /*#__PURE__*/ React.createElement(Element, {
        className: \`jsx-\${styles.__hash}\` + " " + "root"
    }, /*#__PURE__*/ React.createElement("p", {
        className: \`jsx-\${styles.__hash}\`
    }, "dynamic element"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: styles.__hash
    }, styles));
});
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform dynamic-this-in-arrow correctly 1`] = `
"// TODO
// import React, { Component } from 'react'
// export default class Index extends Component {
//   static getInitialProps() {
//     return { color: 'aquamarine' }
//   }
//   render() {
//     return (
//       <div>
//         {[1, 2].map(idx => (
//           <div key={idx}>
//             {[3, 4].map(idx2 => (
//               <div key={idx2}>{this.props.color}</div>
//             ))}
//           </div>
//         ))}
//         {[1, 2].map(idx => (
//           <div key={idx}>
//             <div>
//               {this.props.color}
//               <div className="something">
//                 <React.Fragment>
//                   <div>
//                     <div>{this.props.color} hello there</div>
//                   </div>
//                 </React.Fragment>
//               </div>
//             </div>
//           </div>
//         ))}
//         <style jsx>{\`
//           div {
//             background: \${this.props.color};
//           }
//         \`}</style>
//       </div>
//     )
//   }
// }
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform exported-jsx-style correctly 1`] = `
"// module.exports = () => <p><style jsx>{\`p { color:red; }\`}</style></p>
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform exported-non-jsx-style correctly 1`] = `
"// module.exports = () => <p><style>{\`p { color:red; }\`}</style></p>
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform external-nested-scope correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
function test() {
    ({
        styles: /*#__PURE__*/ React.createElement(_JSXStyle, {
            id: "7b844396f2efe2ef"
        }, "div.jsx-7b844396f2efe2ef{color:red}"),
        className: "jsx-7b844396f2efe2ef"
    });
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform external-stylesheet correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
import styles from "./styles";
const styles2 = require("./styles2");
import { foo as styles3 } from "./styles";
export default (()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-bee92b62eadf8a14 " + \`jsx-\${styles.__hash} jsx-\${styles3.__hash}\`
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-bee92b62eadf8a14 " + \`jsx-\${styles.__hash} jsx-\${styles3.__hash}\` + " " + "foo"
    }, "test"), /*#__PURE__*/ React.createElement("p", {
        className: "jsx-bee92b62eadf8a14 " + \`jsx-\${styles.__hash} jsx-\${styles3.__hash}\`
    }, "woot"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: styles2.__hash
    }, styles2), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: styles3.__hash
    }, styles3), /*#__PURE__*/ React.createElement("div", {
        className: "jsx-bee92b62eadf8a14 " + \`jsx-\${styles.__hash} jsx-\${styles3.__hash}\`
    }, "woot"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "bee92b62eadf8a14"
    }, "p.jsx-bee92b62eadf8a14{color:red}div.jsx-bee92b62eadf8a14{color:green}"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: styles.__hash
    }, styles)));
export const Test = ()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-bee92b62eadf8a14 " + \`jsx-\${styles3.__hash}\`
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-bee92b62eadf8a14 " + \`jsx-\${styles3.__hash}\` + " " + "foo"
    }, "test"), /*#__PURE__*/ React.createElement("p", {
        className: "jsx-bee92b62eadf8a14 " + \`jsx-\${styles3.__hash}\`
    }, "woot"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: styles3.__hash
    }, styles3), /*#__PURE__*/ React.createElement("div", {
        className: "jsx-bee92b62eadf8a14 " + \`jsx-\${styles3.__hash}\`
    }, "woot"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "bee92b62eadf8a14"
    }, "p.jsx-bee92b62eadf8a14{color:red}div.jsx-bee92b62eadf8a14{color:green}"));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform external-stylesheet-global correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
import styles, { foo as styles3 } from "./styles";
const styles2 = require("./styles2");
export default (()=>/*#__PURE__*/ React.createElement("div", null, /*#__PURE__*/ React.createElement("p", null, "test"), /*#__PURE__*/ React.createElement("div", null, "woot"), /*#__PURE__*/ React.createElement("p", null, "woot"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: styles2.__hash
    }, styles2), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: styles3.__hash
    }, styles3), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: styles.__hash
    }, styles)));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform external-stylesheet-multi-line correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
import styles from "./styles";
export default (()=>/*#__PURE__*/ React.createElement("div", {
        className: \`jsx-\${styles.__hash}\`
    }, /*#__PURE__*/ React.createElement("p", {
        className: \`jsx-\${styles.__hash}\`
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: styles.__hash
    }, styles)));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform fragment correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
import React from "react";
export default (()=>/*#__PURE__*/ React.createElement(React.Fragment, null, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-6dd5f97e085c0297"
    }, "Testing!!!"), /*#__PURE__*/ React.createElement("p", {
        className: "jsx-6dd5f97e085c0297" + " " + "foo"
    }, "Bar"), /*#__PURE__*/ React.createElement(React.Fragment, null, /*#__PURE__*/ React.createElement("h3", {
        id: "head",
        className: "jsx-6dd5f97e085c0297"
    }, "Title..."), /*#__PURE__*/ React.createElement(React.Fragment, null, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-6dd5f97e085c0297"
    }, "hello"), /*#__PURE__*/ React.createElement(React.Fragment, null, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-6dd5f97e085c0297"
    }, "foo"), /*#__PURE__*/ React.createElement("p", {
        className: "jsx-6dd5f97e085c0297"
    }, "bar")), /*#__PURE__*/ React.createElement("p", {
        className: "jsx-6dd5f97e085c0297"
    }, "world"))), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "6dd5f97e085c0297"
    }, "p.jsx-6dd5f97e085c0297{color:cyan}.foo.jsx-6dd5f97e085c0297{font-size:18px;color:hotpink}#head.jsx-6dd5f97e085c0297{text-decoration:underline}")));
function Component1() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, /*#__PURE__*/ React.createElement("div", null, "test"));
}
function Component2() {
    return /*#__PURE__*/ React.createElement("div", {
        className: "jsx-678f41ca6d3b294b"
    }, /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "678f41ca6d3b294b"
    }, "div.jsx-678f41ca6d3b294b{color:red}"));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform global correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
const Test = ()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-f84dd0db2f59ea88"
    }, /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "f84dd0db2f59ea88"
    }, "body{color:red}:hover{color:red;display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex;-webkit-animation:foo 1s ease-out;-moz-animation:foo 1s ease-out;-o-animation:foo 1s ease-out;animation:foo 1s ease-out}div a{display:none}[data-test]>div{color:red}"));
const Test2 = ()=>/*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "94239b6d6b42c9b5"
    }, "p{color:red}");
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform global-child-selector correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
const Test = ()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-5a206f122d1cb32e"
    }, /*#__PURE__*/ React.createElement("span", {
        className: "jsx-5a206f122d1cb32e"
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "5a206f122d1cb32e"
    }, "div.jsx-5a206f122d1cb32e>span{color:red}"));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform global-multiple correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
const Test = ()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-3d9ecfaa448ef714"
    }, /*#__PURE__*/ React.createElement("span", {
        className: "jsx-3d9ecfaa448ef714"
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "3d9ecfaa448ef714"
    }, ".c1{background:orange!important}"));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform global-nested correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
const Test = ()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-258c8cca0b71d485"
    }, /*#__PURE__*/ React.createElement("span", {
        className: "jsx-258c8cca0b71d485"
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "258c8cca0b71d485"
    }, ".p1.jsx-258c8cca0b71d485{background:purple!important}.p1.jsx-258c8cca0b71d485 .c1,.p1.jsx-258c8cca0b71d485 .c2.jsx-258c8cca0b71d485{background:orange!important}"));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform global-nested-scope-sel correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
const Test = ()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-b0a16d58836c444b"
    }, /*#__PURE__*/ React.createElement("span", {
        className: "jsx-b0a16d58836c444b"
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "b0a16d58836c444b"
    }, ".parent.jsx-b0a16d58836c444b{}.parent.jsx-b0a16d58836c444b div{}.parent.jsx-b0a16d58836c444b div.child{background:orange}"));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform global-redundant correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default function IndexPage() {
    return /*#__PURE__*/ React.createElement("div", {
        className: "jsx-b6abd0684ba81871"
    }, "should be blue.", /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "b6abd0684ba81871"
    }, "div{color:blue}"));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform global-styles-with-dynamic-values correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default function Component() {
    const id = 'theme-1';
    const cssVariables = {
        '--primary-color': '#0070f3',
        '--secondary-color': '#ff0080'
    };
    const stringifyCssVariablesObject = (obj)=>{
        return Object.entries(obj).map(([key, value])=>\`\${key}: \${value};\`).join('\\n');
    };
    const buttonColor = 'var(--primary-color)';
    const backgroundColor = '#f0f0f0';
    return /*#__PURE__*/ React.createElement("div", {
        className: _JSXStyle.dynamic([
            [
                "f656cf9d5a360ff0",
                [
                    id,
                    stringifyCssVariablesObject(cssVariables),
                    buttonColor,
                    backgroundColor
                ]
            ]
        ]) + " " + \`scope-\${id}\`
    }, /*#__PURE__*/ React.createElement("button", {
        className: _JSXStyle.dynamic([
            [
                "f656cf9d5a360ff0",
                [
                    id,
                    stringifyCssVariablesObject(cssVariables),
                    buttonColor,
                    backgroundColor
                ]
            ]
        ])
    }, "Global Styled Button"), /*#__PURE__*/ React.createElement("div", {
        className: _JSXStyle.dynamic([
            [
                "f656cf9d5a360ff0",
                [
                    id,
                    stringifyCssVariablesObject(cssVariables),
                    buttonColor,
                    backgroundColor
                ]
            ]
        ])
    }, "Styled Div"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "f656cf9d5a360ff0",
        dynamic: [
            id,
            stringifyCssVariablesObject(cssVariables),
            buttonColor,
            backgroundColor
        ]
    }, \`.scope-\${id}{\${stringifyCssVariablesObject(cssVariables)}}.scope-\${id} button{color:\${buttonColor}}.scope-\${id} div{background-color:\${backgroundColor}}\`));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform issue-317 correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export const MyComponent = ()=>/*#__PURE__*/ React.createElement(React.Fragment, null, /*#__PURE__*/ React.createElement("div", {
        className: "jsx-98442910aac83b4a"
    }), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "98442910aac83b4a"
    }, "div.jsx-98442910aac83b4a{background-image:url(\\"data:image/svg+xml,%3Csvg stroke='currentColor' fill='currentColor' stroke-width='0' viewBox='0 0 24 24' height='1em' width='1em' xmlns='http://www.w3.org/2000/svg'%3E%3Cg%3E%3Cpath fill='none' d='M0 0h24v24H0z'%3E%3C/path%3E%3Cpath d='M17 3h4a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h4V1h2v2h6V1h2v2zm3 6V5h-3v2h-2V5H9v2H7V5H4v4h16zm0 2H4v8h16v-8zM6 13h5v4H6v-4z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E%0A\\")}"));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform issue-452 correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default function Home() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, /*#__PURE__*/ React.createElement("div", {
        className: "jsx-762285c3ffa56b0" + " " + "container"
    }, "container (should be blue)", /*#__PURE__*/ React.createElement("div", {
        className: "jsx-762285c3ffa56b0" + " " + "child"
    }, "this should be green")), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "762285c3ffa56b0"
    }, ".container.jsx-762285c3ffa56b0{color:blue;padding:3rem}div.child{color:green}"));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform issue-456 correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default function Home() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "c717b7da8095da63"
    }, ".theme-root{}.theme-root .parent.jsx-c717b7da8095da63{color:green}"));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform issue-460 correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default function Home() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "44c2e59534385f9"
    }, "div.jsx-44c2e59534385f9{-webkit-mask-image:-webkit-radial-gradient(white,black);mask-image:-webkit-radial-gradient(white,black)}"));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform issue-30480 correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default (({ breakPoint })=>/*#__PURE__*/ React.createElement("div", {
        className: _JSXStyle.dynamic([
            [
                "5f9d9d6c208bf9e0",
                [
                    breakPoint
                ]
            ]
        ])
    }, /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "5f9d9d6c208bf9e0",
        dynamic: [
            breakPoint
        ]
    }, \`@media(\${breakPoint}){.test.__jsx-style-dynamic-selector{margin-bottom:1em}}\`)));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform issue-30570 correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default function IndexPage() {
    return /*#__PURE__*/ React.createElement("div", {
        className: "jsx-6226396a225d1c8b"
    }, /*#__PURE__*/ React.createElement("h1", {
        className: "jsx-6226396a225d1c8b"
    }, "Hello World."), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "6226396a225d1c8b"
    }, "@supports((display:flex)or (display:-webkit-box)or (display:-webkit-flex)or (display:-moz-box)or (display:-ms-flexbox)){h1{color:hotpink}}"));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform issue-31562-interpolation-in-mdea correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
class _class {
    render() {
        return /*#__PURE__*/ React.createElement("div", {
            className: _JSXStyle.dynamic([
                [
                    "8ef51f7b1531565",
                    [
                        Typography.base.size.default,
                        Typography.base.lineHeight,
                        Target.mediumPlus,
                        Typography.base.size.mediumPlus,
                        Target.largePlus,
                        Typography.base.size.largePlus
                    ]
                ]
            ])
        }, /*#__PURE__*/ React.createElement("p", {
            className: _JSXStyle.dynamic([
                [
                    "8ef51f7b1531565",
                    [
                        Typography.base.size.default,
                        Typography.base.lineHeight,
                        Target.mediumPlus,
                        Typography.base.size.mediumPlus,
                        Target.largePlus,
                        Typography.base.size.largePlus
                    ]
                ]
            ])
        }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
            id: "8ef51f7b1531565",
            dynamic: [
                Typography.base.size.default,
                Typography.base.lineHeight,
                Target.mediumPlus,
                Typography.base.size.mediumPlus,
                Target.largePlus,
                Typography.base.size.largePlus
            ]
        }, \`html{font-size:\${Typography.base.size.default};line-height:\${Typography.base.lineHeight}}@media \${Target.mediumPlus}{html{font-size:\${Typography.base.size.mediumPlus}}}@media \${Target.largePlus}{html{font-size:\${Typography.base.size.largePlus}}}\`));
    }
}
export { _class as default };
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform legacy-nesting correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default (()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-3b0234e9651851cb"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-3b0234e9651851cb"
    }, "test"), /*#__PURE__*/ React.createElement("p", {
        className: "jsx-3b0234e9651851cb"
    }, "woot"), /*#__PURE__*/ React.createElement("p", {
        className: "jsx-3b0234e9651851cb"
    }, "woot"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "3b0234e9651851cb"
    }, ".container.jsx-3b0234e9651851cb{color:blue;padding:3rem}.container.jsx-3b0234e9651851cb .inner.jsx-3b0234e9651851cb{color:yellow}")));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform lightningcss-1 correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default function IndexPage() {
    return /*#__PURE__*/ React.createElement("div", {
        className: "jsx-490e0a92136d9307"
    }, /*#__PURE__*/ React.createElement("h1", {
        className: "jsx-490e0a92136d9307"
    }, "Hello World."), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "490e0a92136d9307"
    }, ".container{}.container>div{color:green}"));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform media-queries-with-variables correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default function Component() {
    const ResponsiveBreakpoint = {
        mobile: '768px',
        tablet: '1024px',
        desktop: '1440px'
    };
    const breakpoint = 'mobile';
    const mobileWidth = 320;
    return /*#__PURE__*/ React.createElement("div", {
        className: _JSXStyle.dynamic([
            [
                "3cd101c7fd762502",
                [
                    ResponsiveBreakpoint[breakpoint],
                    mobileWidth
                ]
            ]
        ]) + " " + "component"
    }, /*#__PURE__*/ React.createElement("div", {
        className: _JSXStyle.dynamic([
            [
                "3cd101c7fd762502",
                [
                    ResponsiveBreakpoint[breakpoint],
                    mobileWidth
                ]
            ]
        ]) + " " + "active"
    }, "Responsive Element"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "3cd101c7fd762502",
        dynamic: [
            ResponsiveBreakpoint[breakpoint],
            mobileWidth
        ]
    }, \`.component.__jsx-style-dynamic-selector{width:100%}@media(max-width:\${ResponsiveBreakpoint[breakpoint]}){.component.__jsx-style-dynamic-selector{width:\${mobileWidth}px}.component.__jsx-style-dynamic-selector.active.__jsx-style-dynamic-selector{color:blue}.component.__jsx-style-dynamic-selector div.__jsx-style-dynamic-selector{display:block}}\`));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform mixed-global-scoped correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
const Test = ()=>/*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "94239b6d6b42c9b5"
    }, "p{color:red}");
export default (()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-8de09a4a01c37bbf"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-8de09a4a01c37bbf"
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "80dff25115d29c0e"
    }, "body{background:red}"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "94239b6d6b42c9b5"
    }, "p.jsx-8de09a4a01c37bbf{color:red}")));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform multiple-jsx correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
const attrs = {
    id: "test"
};
const Test1 = ()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-a9535d7d5f32c3c4"
    }, /*#__PURE__*/ React.createElement("span", {
        ...attrs,
        "data-test": "test",
        className: "jsx-a9535d7d5f32c3c4" + " " + (attrs && attrs.className != null && attrs.className || "")
    }, "test"), /*#__PURE__*/ React.createElement(Component, null), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "a9535d7d5f32c3c4"
    }, "span.jsx-a9535d7d5f32c3c4{color:red}"));
const Test2 = ()=>/*#__PURE__*/ React.createElement("span", null, "test");
const Test3 = ()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-a9535d7d5f32c3c4"
    }, /*#__PURE__*/ React.createElement("span", {
        className: "jsx-a9535d7d5f32c3c4"
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "a9535d7d5f32c3c4"
    }, "span.jsx-a9535d7d5f32c3c4{color:red}"));
class _class {
    render() {
        return /*#__PURE__*/ React.createElement("div", {
            className: "jsx-b2b86d63f35d25ee"
        }, /*#__PURE__*/ React.createElement("p", {
            className: "jsx-b2b86d63f35d25ee"
        }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
            id: "b2b86d63f35d25ee"
        }, "p.jsx-b2b86d63f35d25ee{color:red}"));
    }
}
export { _class as default };
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform nested-selectors correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default function Component() {
    return /*#__PURE__*/ React.createElement("div", {
        className: "jsx-2552bb7cce0bcbcf" + " " + "parent"
    }, /*#__PURE__*/ React.createElement("div", {
        className: "jsx-2552bb7cce0bcbcf" + " " + "child"
    }, "Nested Selectors Test"), /*#__PURE__*/ React.createElement("h1", {
        className: "jsx-2552bb7cce0bcbcf"
    }, "Heading"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "2552bb7cce0bcbcf"
    }, ".parent.jsx-2552bb7cce0bcbcf{position:relative}.parent.jsx-2552bb7cce0bcbcf.jsx-2552bb7cce0bcbcf:hover{background-color:red}.parent.jsx-2552bb7cce0bcbcf .child.jsx-2552bb7cce0bcbcf{margin-top:10px}.parent.jsx-2552bb7cce0bcbcf div.jsx-2552bb7cce0bcbcf{padding:15px}.parent.jsx-2552bb7cce0bcbcf h1.jsx-2552bb7cce0bcbcf{font-size:24px}"));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform next-54653 correctly 1`] = `
"const _defaultExport = new String("@media(max-width:870px){th.expiration-date-cell,td.expiration-date-cell{display:none}}");
_defaultExport.__hash = "fd71bf06ba8860bb";
export default _defaultExport;
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform next-55679 correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
import { AppProps } from "next/app";
const someVar = "--var-1";
export default function App({ Component, pageProps }) {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "acc68473fe2ae892"
    }, \`:root{\${someVar}:red;background-color:var(\${someVar})}\`), /*#__PURE__*/ React.createElement(Component, {
        ...pageProps,
        className: "jsx-acc68473fe2ae892" + " " + (pageProps && pageProps.className != null && pageProps.className || "")
    }));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform next-61788 correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
const MOBILE_MAX = 767;
export default function Home() {
    return /*#__PURE__*/ React.createElement("div", {
        className: _JSXStyle.dynamic([
            [
                "cd44ce38d77d54f1",
                [
                    MOBILE_MAX
                ]
            ]
        ])
    }, /*#__PURE__*/ React.createElement("h1", {
        className: _JSXStyle.dynamic([
            [
                "cd44ce38d77d54f1",
                [
                    MOBILE_MAX
                ]
            ]
        ]) + " " + "header"
    }, "Hello"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "cd44ce38d77d54f1",
        dynamic: [
            MOBILE_MAX
        ]
    }, \`.header.__jsx-style-dynamic-selector{font-size:48px}@media screen and (max-width:\${MOBILE_MAX}px){.header.__jsx-style-dynamic-selector{font-size:12px}}\`));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform next-64389 correctly 1`] = `
""use client";
import _JSXStyle from "styled-jsx/style";
const color = "color: red;";
export default function RootLayout({ children }) {
    return /*#__PURE__*/ React.createElement("html", {
        className: "jsx-7813f497af86b7a2"
    }, /*#__PURE__*/ React.createElement("head", {
        className: "jsx-7813f497af86b7a2"
    }), /*#__PURE__*/ React.createElement("body", {
        className: "jsx-7813f497af86b7a2"
    }, children), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "7813f497af86b7a2"
    }, \`body{\${color}}body p{font-size:72px}\`));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform non-styled-jsx-style correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default (()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-94239b6d6b42c9b5"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-94239b6d6b42c9b5"
    }, "woot"), /*#__PURE__*/ React.createElement("style", {
        dangerouslySetInnerHTML: {
            __html: \`body { margin: 0; }\`
        }
    }), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "94239b6d6b42c9b5"
    }, "p.jsx-94239b6d6b42c9b5{color:red}")));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform not-styled-jsx-tagged-templates correctly 1`] = `
"import css from "hell";
const color = "red";
const bar = css\`
  div {
    font-size: 3em;
  }
\`;
export const uh = bar;
export const foo = css\`
  div {
    color: \${color};
  }
\`;
export default css\`
  div {
    font-size: 3em;
  }
  p {
    color: \${color};
  }
\`;
const Title = styled.h1\`
  color: red;
  font-size: 50px;
\`;
const AnotherTitle = Title.extend\`
  color: blue;
\`;
export const Component = ()=>/*#__PURE__*/ React.createElement(AnotherTitle, null, "My page");
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform number-after-placeholder correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
import Link from "next/link";
export default function IndexPage() {
    return /*#__PURE__*/ React.createElement("div", {
        className: "jsx-c52d3257f955c0e4"
    }, "Hello World.", " ", /*#__PURE__*/ React.createElement(Link, {
        href: "/about"
    }, /*#__PURE__*/ React.createElement("a", {
        className: "jsx-c52d3257f955c0e4"
    }, "Abound")), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "c52d3257f955c0e4"
    }, \`a.jsx-c52d3257f955c0e4{color:\${"#abcdef"}12}\`));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform one-off-global-selectors correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default (()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-c7c3a8e231c9215a"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-c7c3a8e231c9215a"
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "c7c3a8e231c9215a"
    }, ".container.jsx-c7c3a8e231c9215a>*{color:red}")));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform pack-2714 correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
const { className: cardClassName, styles } = {
    styles: /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "764ef3f9149f0521"
    }, \`.jsx-764ef3f9149f0521:hover{z-index:\${hoverAnimation ? "1" : "auto"}}\`),
    className: "jsx-764ef3f9149f0521"
};
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform pack-2819 correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default (()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-d3bc3634b8d1b3fb"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-d3bc3634b8d1b3fb"
    }, "test"), /*#__PURE__*/ React.createElement("p", {
        className: "jsx-d3bc3634b8d1b3fb"
    }, "woot"), /*#__PURE__*/ React.createElement("p", {
        className: "jsx-d3bc3634b8d1b3fb"
    }, "woot"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "d3bc3634b8d1b3fb"
    }, ".container.jsx-d3bc3634b8d1b3fb{color:blue;padding:3rem}.container.jsx-d3bc3634b8d1b3fb.inner.jsx-d3bc3634b8d1b3fb{color:yellow}")));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform source-maps correctly 1`] = `
"// TODO: needs sourcemaps
// export default () => (
//   <div>
//     <p>test</p>
//     <p>woot</p>
//     <style jsx>{'p { color: red }'}</style>
//   </div>
// )
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform specifity correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default function Home() {
    return /*#__PURE__*/ React.createElement(React.Fragment, null, /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "86b7ac1a67e57b1"
    }, "div.jsx-86b7ac1a67e57b1{}div.jsx-86b7ac1a67e57b1.parent.jsx-86b7ac1a67e57b1{color:green}"));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform stateless correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default (()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-94239b6d6b42c9b5"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-94239b6d6b42c9b5"
    }, "test"), /*#__PURE__*/ React.createElement("p", {
        className: "jsx-94239b6d6b42c9b5"
    }, "woot"), /*#__PURE__*/ React.createElement("p", {
        className: "jsx-94239b6d6b42c9b5"
    }, "woot"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "94239b6d6b42c9b5"
    }, "p.jsx-94239b6d6b42c9b5{color:red}")));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform styles correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
import colors, { size } from "./constants";
const color = "red";
const bar = new String("div.jsx-aaed0341accea8f{font-size:3em}");
bar.__hash = "aaed0341accea8f";
const baz = new String("div{font-size:3em}");
baz.__hash = "aaed0341accea8f";
const a = new String(\`div{font-size:\${size}em}\`);
a.__hash = "7c86155cabf5dc29";
export const uh = bar;
export const foo = new String(\`div.jsx-94c5b10770851b72{color:\${color}}\`);
foo.__hash = "94c5b10770851b72";
({
    styles: /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "7cf3236ca7e1da12"
    }, \`div.jsx-7cf3236ca7e1da12{color:\${colors.green.light}}a.jsx-7cf3236ca7e1da12{color:red}\`),
    className: "jsx-7cf3236ca7e1da12"
});
const b = {
    styles: /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "5b414b974635264"
    }, \`div.jsx-5b414b974635264{color:\${colors.green.light}}a.jsx-5b414b974635264{color:red}\`),
    className: "jsx-5b414b974635264"
};
const dynamic = (colors)=>{
    const b = {
        styles: /*#__PURE__*/ React.createElement(_JSXStyle, {
            id: "b396cc7974579919",
            dynamic: [
                colors.green.light
            ]
        }, \`div.__jsx-style-dynamic-selector{color:\${colors.green.light}}a.__jsx-style-dynamic-selector{color:red}\`),
        className: _JSXStyle.dynamic([
            [
                "b396cc7974579919",
                [
                    colors.green.light
                ]
            ]
        ])
    };
};
export default {
    styles: /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "b4488421eff98e80"
    }, \`div.jsx-b4488421eff98e80{font-size:3em}p.jsx-b4488421eff98e80{color:\${color}}\`),
    className: "jsx-b4488421eff98e80"
};
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform styles-external-invalid correctly 1`] = `
"// TODO
// import css from 'styled-jsx/css'
// const color = 'red'
// export const foo = css\`div { color: \${color}}\`
// const props = { color: 'red ' }
// export default css\`
//   div { font-size: 3em; color: \${props.color} }
//   p { color: \${this.props.color};}
// \`
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform styles-external-invalid2 correctly 1`] = `
"// TODO
// import css from 'styled-jsx/css'
// const color = 'red'
// export const foo = css\`div { color: \${color}}\`
// export default css\`
//   div { font-size: 3em }
//   p { color: \${props.color};}
// \`
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform styles2 correctly 1`] = `
"// TODO: support common js
// import css from 'styled-jsx/css'
// module.exports = css\`
//   div { font-size: 3em }
// \`
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform svg-strip correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
const CUTOUT_AVATAR_PERCENTAGE_VISIBLE = Math.random();
const HEAD_MARGIN_PERCENTAGE = Math.random();
const MaskedDivBad = ()=>{
    return /*#__PURE__*/ React.createElement(React.Fragment, null, /*#__PURE__*/ React.createElement("div", {
        className: _JSXStyle.dynamic([
            [
                "bdb053406d346a78",
                [
                    0.5 + HEAD_MARGIN_PERCENTAGE,
                    0.5 + CUTOUT_AVATAR_PERCENTAGE_VISIBLE + HEAD_MARGIN_PERCENTAGE
                ]
            ]
        ]) + " " + "head"
    }, /*#__PURE__*/ React.createElement("div", {
        className: _JSXStyle.dynamic([
            [
                "bdb053406d346a78",
                [
                    0.5 + HEAD_MARGIN_PERCENTAGE,
                    0.5 + CUTOUT_AVATAR_PERCENTAGE_VISIBLE + HEAD_MARGIN_PERCENTAGE
                ]
            ]
        ]) + " " + "avatar-wrapper"
    })), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "bdb053406d346a78",
        dynamic: [
            0.5 + HEAD_MARGIN_PERCENTAGE,
            0.5 + CUTOUT_AVATAR_PERCENTAGE_VISIBLE + HEAD_MARGIN_PERCENTAGE
        ]
    }, \`.head.__jsx-style-dynamic-selector{position:relative}.avatar-wrapper.__jsx-style-dynamic-selector{width:40px;height:40px;background:#ff6b6b;-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%;-webkit-mask-image:url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1 1"><circle r="0.5" cx="0.5" cy="0.5"/></svg>'),url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1 1"><circle r="\${0.5 + HEAD_MARGIN_PERCENTAGE}" cx="\${0.5 + CUTOUT_AVATAR_PERCENTAGE_VISIBLE + HEAD_MARGIN_PERCENTAGE}" cy="0.5"/></svg>');mask-image:url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1 1"><circle r="0.5" cx="0.5" cy="0.5"/></svg>'),url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1 1"><circle r="\${0.5 + HEAD_MARGIN_PERCENTAGE}" cx="\${0.5 + CUTOUT_AVATAR_PERCENTAGE_VISIBLE + HEAD_MARGIN_PERCENTAGE}" cy="0.5"/></svg>');-webkit-mask-size:100%100%;mask-size:100%100%;-webkit-mask-repeat:no-repeat;mask-repeat:no-repeat;-webkit-mask-position:center;mask-position:center;-webkit-mask-composite:source-out;mask-composite:subtract}\`));
};
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform too-many correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export const Red = ({ Component = "button" })=>{
    return /*#__PURE__*/ React.createElement(Component, {
        className: _JSXStyle.dynamic([
            [
                "5a2b0b6f23b33f9",
                [
                    e1,
                    e2,
                    e3,
                    e4,
                    e5,
                    e6,
                    e7,
                    e8,
                    e9,
                    e10,
                    e11,
                    e12,
                    e13,
                    e14,
                    e15
                ]
            ]
        ])
    }, /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "5a2b0b6f23b33f9",
        dynamic: [
            e1,
            e2,
            e3,
            e4,
            e5,
            e6,
            e7,
            e8,
            e9,
            e10,
            e11,
            e12,
            e13,
            e14,
            e15
        ]
    }, \`.button.__jsx-style-dynamic-selector{--button-1:\${e1};--button-2:\${e2};--button-3:\${e3};--button-4:\${e4};--button-5:\${e5};--button-6:\${e6};--button-7:\${e7};--button-8:\${e8};--button-9:\${e9};--button-10:\${e10};--button-11:\${e11};--button-12:\${e12};--button-13:\${e13};--button-14:\${e14};--button-15:\${e15}}\`));
};
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform tpl-escape-1 correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
class _class {
    render() {
        return /*#__PURE__*/ React.createElement("div", {
            className: "jsx-71816f8e3c42a736"
        }, /*#__PURE__*/ React.createElement("p", {
            className: "jsx-71816f8e3c42a736"
        }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
            id: "71816f8e3c42a736"
        }, 'p.jsx-71816f8e3c42a736{content:"\`"}'));
    }
}
export { _class as default };
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform tpl-escape-2 correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default function Home({ fontFamily }) {
    return /*#__PURE__*/ React.createElement("div", {
        className: _JSXStyle.dynamic([
            [
                "d3142704be9609d2",
                [
                    fontFamily
                ]
            ]
        ])
    }, /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "d3142704be9609d2",
        dynamic: [
            fontFamily
        ]
    }, \`body{font-family:\${fontFamily}}code:before,code:after{content:"\\\`"}\`));
}
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform tpl-placeholder-1-as-property correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
class _class {
    render() {
        return /*#__PURE__*/ React.createElement("div", {
            className: _JSXStyle.dynamic([
                [
                    "f9aa00e7cff3b4b",
                    [
                        inputSize ? "height: calc(2 * var(--a)) !important;" : ""
                    ]
                ]
            ])
        }, /*#__PURE__*/ React.createElement("p", {
            className: _JSXStyle.dynamic([
                [
                    "f9aa00e7cff3b4b",
                    [
                        inputSize ? "height: calc(2 * var(--a)) !important;" : ""
                    ]
                ]
            ])
        }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
            id: "f9aa00e7cff3b4b",
            dynamic: [
                inputSize ? "height: calc(2 * var(--a)) !important;" : ""
            ]
        }, \`@media only screen{a.__jsx-style-dynamic-selector{\${inputSize ? "height: calc(2 * var(--a)) !important;" : ""}}}\`));
    }
}
export { _class as default };
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform tpl-placeholder-2-as-part-of-value correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
class _class {
    render() {
        return /*#__PURE__*/ React.createElement("div", {
            className: _JSXStyle.dynamic([
                [
                    "c78f5a8771ac2a3b",
                    [
                        a[b],
                        -1 * (c || 0),
                        d
                    ]
                ]
            ])
        }, /*#__PURE__*/ React.createElement("p", {
            className: _JSXStyle.dynamic([
                [
                    "c78f5a8771ac2a3b",
                    [
                        a[b],
                        -1 * (c || 0),
                        d
                    ]
                ]
            ])
        }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
            id: "c78f5a8771ac2a3b",
            dynamic: [
                a[b],
                -1 * (c || 0),
                d
            ]
        }, \`.a:hover .b.__jsx-style-dynamic-selector{a:\${a[b]}px!important;b:translate3d(0,\${-1 * (c || 0)}px,-\${d}px)scale(1)!important}\`));
    }
}
export { _class as default };
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform tpl-placeholder-3-as-value correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
class _class {
    render() {
        return /*#__PURE__*/ React.createElement("div", {
            className: _JSXStyle.dynamic([
                [
                    "eee2d2bddf546a68",
                    [
                        a
                    ]
                ]
            ])
        }, /*#__PURE__*/ React.createElement("p", {
            className: _JSXStyle.dynamic([
                [
                    "eee2d2bddf546a68",
                    [
                        a
                    ]
                ]
            ])
        }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
            id: "eee2d2bddf546a68",
            dynamic: [
                a
            ]
        }, \`@media only screen{a.__jsx-style-dynamic-selector{color:\${a}}}\`));
    }
}
export { _class as default };
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform tpl-placeholder-4-as-part-of-value-in-multiple correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
class _class {
    render() {
        return /*#__PURE__*/ React.createElement("div", {
            className: _JSXStyle.dynamic([
                [
                    "78e5427773a40a7d",
                    [
                        a || "var(--c)",
                        b || "inherit"
                    ]
                ]
            ])
        }, /*#__PURE__*/ React.createElement("p", {
            className: _JSXStyle.dynamic([
                [
                    "78e5427773a40a7d",
                    [
                        a || "var(--c)",
                        b || "inherit"
                    ]
                ]
            ])
        }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
            id: "78e5427773a40a7d",
            dynamic: [
                a || "var(--c)",
                b || "inherit"
            ]
        }, \`.a:hover .b.__jsx-style-dynamic-selector{display:inline-block;padding:0 \${a || "var(--c)"};color:\${b || "inherit"}}\`));
    }
}
export { _class as default };
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform tpl-placeholder-5-values-of-multiple-properties correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
class _class {
    render() {
        return /*#__PURE__*/ React.createElement("div", {
            className: _JSXStyle.dynamic([
                [
                    "37d42e5b6f9d65f8",
                    [
                        a ? "100%" : "200px",
                        b ? "0" : "8px 20px"
                    ]
                ]
            ])
        }, /*#__PURE__*/ React.createElement("p", {
            className: _JSXStyle.dynamic([
                [
                    "37d42e5b6f9d65f8",
                    [
                        a ? "100%" : "200px",
                        b ? "0" : "8px 20px"
                    ]
                ]
            ])
        }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
            id: "37d42e5b6f9d65f8",
            dynamic: [
                a ? "100%" : "200px",
                b ? "0" : "8px 20px"
            ]
        }, \`.item.__jsx-style-dynamic-selector{max-width:\${a ? "100%" : "200px"};padding:\${b ? "0" : "8px 20px"}}\`));
    }
}
export { _class as default };
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform transform-css correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default (()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-374655937fd2de40"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-374655937fd2de40"
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "374655937fd2de40"
    }, 'html.jsx-374655937fd2de40{background-image:-webkit-linear-gradient(bottom,rgba(255,255,255,.8),rgba(255,255,255,.8)),url(/static/background.svg);background-image:-moz-linear-gradient(bottom,rgba(255,255,255,.8),rgba(255,255,255,.8)),url(/static/background.svg);background-image:-o-linear-gradient(bottom,rgba(255,255,255,.8),rgba(255,255,255,.8)),url(/static/background.svg);background-image:linear-gradient(0deg,rgba(255,255,255,.8),rgba(255,255,255,.8)),url(/static/background.svg)}p{color:#001}p{color:#002}p,a.jsx-374655937fd2de40{color:#003}.foo+a{color:#004}body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif}p.jsx-374655937fd2de40{color:#005}p.jsx-374655937fd2de40{color:#006}*.jsx-374655937fd2de40{color:#007}[href="woot"].jsx-374655937fd2de40{color:#008}p.jsx-374655937fd2de40 a.jsx-374655937fd2de40 span.jsx-374655937fd2de40{color:#009}p.jsx-374655937fd2de40 span{background:#00a}p.jsx-374655937fd2de40 a[title="\\'w \\' \\'  t\\'"].jsx-374655937fd2de40{margin:auto}p.jsx-374655937fd2de40 span:not(.test){color:#00b}p.jsx-374655937fd2de40,h1.jsx-374655937fd2de40{color:#00c;-webkit-animation:hahaha 3s ease forwards infinite;-moz-animation:hahaha 3s ease forwards infinite;-o-animation:hahaha 3s ease forwards infinite;animation:hahaha 3s ease forwards infinite;-webkit-animation-name:hahaha;-moz-animation-name:hahaha;-o-animation-name:hahaha;animation-name:hahaha;-webkit-animation-delay:100ms;-moz-animation-delay:100ms;-o-animation-delay:100ms;animation-delay:100ms}p.jsx-374655937fd2de40{-webkit-animation:hahaha 1s,hehehe 2s;-moz-animation:hahaha 1s,hehehe 2s;-o-animation:hahaha 1s,hehehe 2s;animation:hahaha 1s,hehehe 2s}p.jsx-374655937fd2de40:hover{color:#00d}p.jsx-374655937fd2de40::before{color:#00e}.jsx-374655937fd2de40:hover{color:#00f}.jsx-374655937fd2de40::before{color:#010}.jsx-374655937fd2de40:hover p.jsx-374655937fd2de40{color:#011}p.jsx-374655937fd2de40+a.jsx-374655937fd2de40{color:#012}p.jsx-374655937fd2de40~a.jsx-374655937fd2de40{color:#013}p.jsx-374655937fd2de40>a.jsx-374655937fd2de40{color:#014}@-webkit-keyframes hahaha{from{top:0}to{top:100}}@-moz-keyframes hahaha{from{top:0}to{top:100}}@-o-keyframes hahaha{from{top:0}to{top:100}}@keyframes hahaha{from{top:0}to{top:100}}@-webkit-keyframes hehehe{from{left:0}to{left:100}}@-moz-keyframes hehehe{from{left:0}to{left:100}}@-o-keyframes hehehe{from{left:0}to{left:100}}@keyframes hehehe{from{left:0}to{left:100}}@media(min-width:500px){.test.jsx-374655937fd2de40{color:#015}}.test.jsx-374655937fd2de40{display:block}.inline-flex.jsx-374655937fd2de40{display:-webkit-inline-box;display:-webkit-inline-flex;display:-moz-inline-box;display:-ms-inline-flexbox;display:inline-flex}.flex.jsx-374655937fd2de40{display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex}.test.jsx-374655937fd2de40{-webkit-box-shadow:0 0 10px black,inset 0 0 5px black;-moz-box-shadow:0 0 10px black,inset 0 0 5px black;box-shadow:0 0 10px black,inset 0 0 5px black}.test[title=","].jsx-374655937fd2de40{display:inline-block}.test.is-status.jsx-374655937fd2de40 .test.jsx-374655937fd2de40{color:#016}.a-selector.jsx-374655937fd2de40:hover,.a-selector.jsx-374655937fd2de40:focus{outline:none}@media(min-width:1px)and (max-width:768px){[class*="grid__col--"].jsx-374655937fd2de40{margin-top:12px;margin-bottom:12px}}@media(max-width:64em){.test.jsx-374655937fd2de40{margin-bottom:1em}@supports(-moz-appearance:none)and (display:contents){.test.jsx-374655937fd2de40{margin-bottom:2rem}}}')));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform transform-css-complex-selector correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default (()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-2e0b2fdc9a904355"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-2e0b2fdc9a904355"
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "2e0b2fdc9a904355"
    }, "p.jsx-2e0b2fdc9a904355 a.jsx-2e0b2fdc9a904355 span.jsx-2e0b2fdc9a904355{color:red}p.jsx-2e0b2fdc9a904355 span{background:blue}p.jsx-2e0b2fdc9a904355 a[title=\\"'w ' '  t'\\"].jsx-2e0b2fdc9a904355{margin:auto}p.jsx-2e0b2fdc9a904355 span:not(.test){color:green}p.jsx-2e0b2fdc9a904355,h1.jsx-2e0b2fdc9a904355{color:blue;-webkit-animation:hahaha 3s ease forwards infinite;-moz-animation:hahaha 3s ease forwards infinite;-o-animation:hahaha 3s ease forwards infinite;animation:hahaha 3s ease forwards infinite;-webkit-animation-name:hahaha;-moz-animation-name:hahaha;-o-animation-name:hahaha;animation-name:hahaha;-webkit-animation-delay:100ms;-moz-animation-delay:100ms;-o-animation-delay:100ms;animation-delay:100ms}p.jsx-2e0b2fdc9a904355{-webkit-animation:hahaha 1s,hehehe 2s;-moz-animation:hahaha 1s,hehehe 2s;-o-animation:hahaha 1s,hehehe 2s;animation:hahaha 1s,hehehe 2s}p.jsx-2e0b2fdc9a904355:hover{color:red}p.jsx-2e0b2fdc9a904355::before{color:red}.jsx-2e0b2fdc9a904355:hover{color:red}.jsx-2e0b2fdc9a904355::before{color:red}.jsx-2e0b2fdc9a904355:hover p.jsx-2e0b2fdc9a904355{color:red}p.jsx-2e0b2fdc9a904355+a.jsx-2e0b2fdc9a904355{color:red}p.jsx-2e0b2fdc9a904355~a.jsx-2e0b2fdc9a904355{color:red}p.jsx-2e0b2fdc9a904355>a.jsx-2e0b2fdc9a904355{color:red}@-webkit-keyframes hahaha{from{top:0}to{top:100}}@-moz-keyframes hahaha{from{top:0}to{top:100}}@-o-keyframes hahaha{from{top:0}to{top:100}}@keyframes hahaha{from{top:0}to{top:100}}@-webkit-keyframes hehehe{from{left:0}to{left:100}}@-moz-keyframes hehehe{from{left:0}to{left:100}}@-o-keyframes hehehe{from{left:0}to{left:100}}@keyframes hehehe{from{left:0}to{left:100}}@media(min-width:500px){.test.jsx-2e0b2fdc9a904355{color:red}}.test.jsx-2e0b2fdc9a904355{display:block}.inline-flex.jsx-2e0b2fdc9a904355{display:-webkit-inline-box;display:-webkit-inline-flex;display:-moz-inline-box;display:-ms-inline-flexbox;display:inline-flex}.flex.jsx-2e0b2fdc9a904355{display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex}.test.jsx-2e0b2fdc9a904355{-webkit-box-shadow:0 0 10px black,inset 0 0 5px black;-moz-box-shadow:0 0 10px black,inset 0 0 5px black;box-shadow:0 0 10px black,inset 0 0 5px black}.test[title=\\",\\"].jsx-2e0b2fdc9a904355{display:inline-block}.test.is-status.jsx-2e0b2fdc9a904355 .test.jsx-2e0b2fdc9a904355{color:red}.a-selector.jsx-2e0b2fdc9a904355:hover,.a-selector.jsx-2e0b2fdc9a904355:focus{outline:none}")));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform transform-css-complex-selector-2 correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default (()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-f12d8626937fd2c6"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-f12d8626937fd2c6"
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "f12d8626937fd2c6"
    }, ".a-selector.jsx-f12d8626937fd2c6:hover,.a-selector.jsx-f12d8626937fd2c6:focus{outline:none}")));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform transform-css-global correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default (()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-13e06bb770708a4c"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-13e06bb770708a4c"
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "13e06bb770708a4c"
    }, 'html.jsx-13e06bb770708a4c{background-image:-webkit-linear-gradient(bottom,rgba(255,255,255,.8),rgba(255,255,255,.8)),url(/static/background.svg);background-image:-moz-linear-gradient(bottom,rgba(255,255,255,.8),rgba(255,255,255,.8)),url(/static/background.svg);background-image:-o-linear-gradient(bottom,rgba(255,255,255,.8),rgba(255,255,255,.8)),url(/static/background.svg);background-image:linear-gradient(0deg,rgba(255,255,255,.8),rgba(255,255,255,.8)),url(/static/background.svg)}p{color:#001}h1{color:#002}h2,a.jsx-13e06bb770708a4c{color:#003}.foo+a{color:#004}body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif}')));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform transform-css-media-query correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default (()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-ec1bf2b940b30dc"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-ec1bf2b940b30dc"
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "ec1bf2b940b30dc"
    }, '@media(min-width:1px)and (max-width:768px){[class*="grid__col--"].jsx-ec1bf2b940b30dc{margin-top:12px;margin-bottom:12px}}@media(max-width:64em){.test.jsx-ec1bf2b940b30dc{margin-bottom:1em}@supports(-moz-appearance:none)and (display:contents){.test.jsx-ec1bf2b940b30dc{margin-bottom:2rem}}}')));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform transform-css-normal correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default (()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-292192d0348369b"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-292192d0348369b"
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "292192d0348369b"
    }, 'p.jsx-292192d0348369b{color:red}p.jsx-292192d0348369b{color:red}*.jsx-292192d0348369b{color:blue}[href="woot"].jsx-292192d0348369b{color:red}')));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform transform-css-nth-1 correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default (()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-d8153edfc80ef241"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-d8153edfc80ef241"
    }, "test"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "d8153edfc80ef241"
    }, "li.jsx-d8153edfc80ef241:nth-child(2){color:lime}")));
"
`;

exports[`Should load swc-confidential wasm plugin correctly > Should transform whitespace correctly 1`] = `
"import _JSXStyle from "styled-jsx/style";
export default (()=>/*#__PURE__*/ React.createElement("div", {
        className: "jsx-94239b6d6b42c9b5"
    }, /*#__PURE__*/ React.createElement("p", {
        className: "jsx-94239b6d6b42c9b5"
    }, "test"), /*#__PURE__*/ React.createElement("p", {
        className: "jsx-94239b6d6b42c9b5"
    }, "woot"), /*#__PURE__*/ React.createElement("p", {
        className: "jsx-94239b6d6b42c9b5"
    }, "woot"), /*#__PURE__*/ React.createElement(_JSXStyle, {
        id: "94239b6d6b42c9b5"
    }, "p.jsx-94239b6d6b42c9b5{color:red}")));
"
`;
